# tiga_get_data_for_dataviz_polars

./: .gitignore  README.md  main.ipynb  pyproject.toml
src/: __main__.py  get_naf_notion.py  process_data.py
